# solana-contracts

./: README.md
amm/: Anchor.toml  README.md  package-lock.json  package.json
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: errors.rs  lib.rs  state.rs
amm/programs/amm/src/instructions/: create_amm.rs  create_pool.rs  deposit_liquidity.rs  mod.rs  swap_tokens.rs  withdraw_liquidity.rs
amm/tests/: create-amm.ts  create-pool.ts  deposit-liquidity.ts  swap-tokens.ts  withdraw-liquidity.ts
bridge/: README.md
bridge/bridging-solana/: Anchor.toml  package-lock.json  package.json
bridge/bridging-solana/programs/bridging-solana/: Cargo.toml
bridge/bridging-solana/programs/bridging-solana/src/: errors.rs  lib.rs  state.rs
bridge/bridging-solana/programs/bridging-solana/src/instructions/: emergency_withdraw.rs  initialize.rs  lock_tokens.rs  (+4 more)
bridge/bridging-solana/tests/: initialize.ts  lock_tokens.ts  pause_resume.ts  unlock_from_evm.ts
bridge/evm-bridge/: foundry.toml
bridge/evm-bridge/script/: Deploy.s.sol
bridge/evm-bridge/src/: EvmBridge.sol  WrappedToken.sol
bridge/relayer/: Cargo.toml
bridge/relayer/idls/: bridging_solana.json
bridge/relayer/src/: main.rs
bridge/relayer/src/abis/: mod.rs
bridge/relayer/src/loops/: eth_to_solana.rs  mod.rs  solana_to_eth.rs
bridging-solana/: Anchor.toml
bridging-solana/programs/bridging-solana/: Cargo.toml
bridging-solana/programs/bridging-solana/src/: lib.rs
bridging-solana/programs/bridging-solana/src/instructions/: initialize.rs  lock_tokens.rs
bridging-solana/tests/: bridging-solana.ts
