[package]
name = "relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0.100"
dotenvy = "0.15.7"
ethers = { version = "2.0.14", features = ["ws", "abigen"] }
serde_json = "1.0.145"
solana-client = "3.1.4"
solana-sdk = "3.0.0"
tokio = {version = "1.48.0", features= ["macros", "rt-multi-thread"]}
